# pymss-core

./: .gitignore  README.md  README_CN.md  pyproject.toml  setup.py
.github/workflows/: release.yml  webui-assets.yml
docs/: msseparator.md  msseparator_cn.md
docs/server/: api.md  cli.md  errors.md
pymss/: __init__.py  audio_io.py  cli.py  config.py  ensemble.py  logger.py  model_download.py  model_registry.py  separator.py  utils.py
pymss/modules/: apollo_mlx.py  bandit_mlx.py  demucs4ht.py  demucs_local.py  demucs_mlx.py  legacy_demucs.py  mdx23c_mlx.py  mdx23c_tfc_tdf_v3.py  scnet_mlx.py  segm_models.py  spectrogram.py  upernet_swin_transformers.py
pymss/modules/bandit/core/: __init__.py
pymss/modules/bandit_v2/: bandit.py  bandsplit.py  film.py  maskestim.py  utils.py
pymss/modules/bs_roformer/: __init__.py  attend.py  bands.py  bs_roformer.py  bs_roformer_hyperace.py  common.py  mel_band_roformer.py  mlx_attention.py  mlx_roformer.py  transformer.py
pymss/modules/look2hear/: __init__.py  apollo.py  base_model.py
pymss/modules/scnet/: __init__.py  scnet.py
pymss/modules/vocal_remover/: __init__.py  common_separator.py  vr_mlx.py  vr_models.py  vr_separator.py
pymss/modules/vocal_remover/uvr_lib_v5/: spec_utils.py
pymss/resources/: model_catalog.json
pymss/server/: __init__.py  app.py  audio.py  config.py  errors.py  models.py  state.py  webui.py
pymss/server/webui_static/: index.html
pymss/server/webui_static/assets/: index-B1MMXaHu.js  index-BAUz7_AB.css  index-C6qdxuV0.css  (+1 more)
pymss_core/modules/: bandit_mlx.py  mdx23c_mlx.py  progress.py  scnet_mlx.py
pymss_core/modules/bs_roformer/: bands.py  bs_roformer.py  common.py  mel_band_roformer.py  mlx_roformer.py
test/: cases.py
test/server/: conftest.py  server_client_demo.py  start_server.sh  test_download_source_endpoints.py  test_dynamic_model_management_cli.py  test_dynamic_model_management_endpoints.py  test_dynamic_model_management_live_http.py  test_model_catalog_download_live_http.py  test_model_catalog_endpoints.py  test_model_download_endpoints.py  test_webui_endpoints.py
tests/: test_core_api.py
webui/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.svelte  app.css  main.ts
webui/src/lib/: api.ts  app-actions.ts  app-controller.svelte.ts  app-state.ts  audio.ts  params.ts  types.ts
(+19 files in other folders)
