[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymss"
version = "2.0.2"
description = "Python package for music source separation."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "KitsuneX07", email = "ghast1085654218@163.com" },
]
maintainers = [
    { name = "baicai1145", email = "3423714059@qq.com" },
]
keywords = [
    "music source separation",
    "audio separation",
    "music processing",
    "machine learning",
    "audio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "av>=14",
    "librosa>=0.10.2",
    "numpy>=1.26",
    "pyyaml>=6.0.1",
    "torch>=2.7.1",
    "tqdm>=4.60",
    "mlx>=0.31.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
pymss = "pymss.cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/pymss-project/pymss/issues"
"Source Code" = "https://github.com/pymss-project/pymss"
Documentation = "https://github.com/pymss-project/pymss/blob/main/README.md"

[tool.setuptools.packages.find]
include = ["pymss*"]

[tool.setuptools.package-data]
pymss = [
    "resources/model_catalog.json",
    "resources/vr_modelparams/*.json",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py310"
line-length = 128

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
markers = [
    "integration: tests that require local model, config, and audio assets",
]
